css/skeleton.css
/* ... */
.research {
    background: url(../images/books.jpg);
}

.infoarchi {
    background: url(../images/drawers.jpg);
}

.branding {
    background: url(../images/type.jpg);
}

.visualdesign {
    background: url(../images/me_design.jpg);
}

.testing {
    background: url(../images/3phones.jpg);
}

.background{
  position:relative;
  height: 250px;
  overflow: hidden;
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  margin-top: 2%;
}

.section-text h3{
  /*position:relative;*/
  padding: 20px 20px;
  background-color: black;
  background: rgba(0,0,0, .5);
  margin: 80px 0px 0px;
  text-align: center;
}

.center{
  margin-top: 10%;
  /*padding: 0px 0px;*/
  text-align: center;
}

.subsection{
  margin-top: 10%
}

.subcontainer{
  width: 100%;
  background-color: #303030;
}

.centered-persona{
  margin: 10% 1%;
  text-align: center;
}

.survey{
  margin-top: -7.5%;
}

/*Blocbox––––––––––––––––––––––––––––––––––––––––––––––––––-*/

.blocbox_hero{
 background: url(../images/blocbox_showcase.png) no-repeat center;
 background-size: contain;
}

.bb_logo {
  width: 40%;
}

.four.columns.subsection.centered-persona{
  width:31%;
}

.one_column_logos{
  width: 60%;
  margin: 0 20%;
}

.justified {
  text-align:
}

.button.laptop_view {
  display: inline-block;
}

.button.mobile_view {
  display: none;
}

.text_image {
  text-align: left;
  padding: 10px 10px;
}

.light{
  background-color: #303030;
}

.dark{
  background-color: #303030;
}

.text_image h6{
  font-weight: bold;
  margin: auto 60px;
}


.text_image li {
  text-decoration: none;
  list-style: square inside;
  display: list-item;
  margin: 2px 2px 0px 100px;
  font-size: 80%;
  line-height: 1.5em;
  padding-left: 2px;
  /*margin-left: 50px;*/
}

.nomargincol {
  /*background-color: red;*/
 margin: 0;
}

.mobgrid {
  display: grid;
  max-width: 47%;
  margin-right: 3%;
}

.mobgrid li, .mobgrid h6{
  margin: 0;
}

.mobgrid p{
  font-size: 80%;
}



















































































/*  Queries
–––––––––––––––––––––––––––––––––––––––––––––––––– */
/*
Note: The best way to structure the use of  queries is to create the queries
near the relevant code. For example, if you wanted to change the styles for buttons
on small devices, paste the mobile query code up in the buttons section and style it
there.
*/

/*Smaller than phablet (also point when grid becomes active) */
@media (max-width: 550px) {

  h1, h3, h4 {
    font-weight: 600;
    background-color:#121212;
    background: rgba(0,0,0, .5);
  }

  .hero h5{
    background-color:#121212;
    background: rgba(0,0,0, .5);
  }
  .project_background h5, img{
    background-color:#121212;
    background: rgba(0,0,0, .5);
  }

  p {
    font-size: 1.5rem;
    margin-top: 0;
  }

  .navigation{
    margin-top: -50px;
  }

  .hero{
    height: 400px;
  }

  .centered-text{
    margin: 10% 5%;
    text-align: center;
  }

  .lastsection{
    position:relative;
    height: 180px;
    overflow: hidden;
    background: url(../images/background_triangle_black_yellow.png) no-repeat center;
    background-size: 800px;
  }

  .about-img{
    height:160px;
  }

  .row {
    display:grid;
  }

  .project-img{
    order: 1;
  }

  .footnav{
    margin-top: -30px;
  }


  /*Project Specific Codes ––––––––––––––––––––––––––––––––––––––––––––––––––-*/
  /*Filo––––––––––––––––––––––––––––––––––––––––––––––––––-*/
  .top .row{
    margin-top: 0;
  }
  .project_hero{
    min-height: 250px;
    background: url(../images/filo_3screens-v4.png) no-repeat;
    background-size: cover;
    background-position: center top;
  }

  .centered-nav{
    margin: 10%;
    text-align: center;
  }

  .one-fifth.column{
    display: grid;
    width: 100%;
    margin: 2.5%;
    /*vertical-align: middle;*/
  }

  .one-fifth.column li{
    background-color: #121212;
    border-radius: 4px;
    border: 3px solid white;
    margin-top: 2%;
    height: 42px;
    display: grid;
    align-items: center;
  }

  .laptop, .mobgrid.laptop {
    display: none;
  }

  .container.mobile{
    margin-left: 5%;
    margin-top: 15%;
    display: block;
  }

  .project_logo{
    width: 50%;
  }

  .row h4, .showcase-img, .center h4, .about-img{
    background-color: transparent;
  }

  .row, .background{
    margin-top: 10%
  }

  .goals {
    margin-top: 25%;
  }

  .survey{
    margin-top: -10%;
  }

  /*
  .three.columns.subcontainer.container h5, p{
    margin-left: 1%;
    align-items: center;
  }*/

  /*.midsection1 .three {
    display: inline-block;
    width: 25%;
    margin: 2.5% 2.5% 2.5% 1%;
  }*/

  .header .row {
      margin-top: 0px;
  }

  .footer {
    padding-top: 0px;
  }

  .mobile_tasks{
    width: 46%;
    margin: 2%;
  }

  .mobile_tasks h5{
    font-weight: bold;
  }

  .mobile_tasks h5{
    text-align: left;
  }

  .mobile_tasks p{
    text-align: left;
  }

  .laptop_row{
    display: none;
  }

  .mobile_row{
    display: block;
  }

  .taller_bg{
    height: 220px;
  }

/*Blocbox––––––––––––––––––––––––––––––––––––––––––––––––––-*/
  .blocbox_hero{
    background: url(../images/blocbox_showcase.png) no-repeat center;
    background-size: contain;
  }

  .four.columns.subsection.centered-persona{
    width:100%;
  }

  .four.columns.subsection.centered-persona h5{
    background-color: black;
    margin:0 3% 0 1%;
  }

.six.columns.subsection.centered-persona h5{
    background-color: black;
    margin:0 3% 0 1%;
  }

.button.laptop_view {
  display: none;
}

.button.mobile_view {
  margin-top: 30px;
  align-content: center;
  display: block;
}

}
/* ... */

